Regression: World shader setup crashes Blender in rendered view #101372

Closed
opened 2022-09-26 08:29:08 +02:00 by Mingwei Lim · 11 comments

System Information
Operating system: macOS-12.6-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 04:23, hash: 34477bbfcd
Worked: N/A
First bad commit 697b447c20

Short description of error
When in rendered view, a particular material setup in the world shader will crash Blender immediately.

Exact steps for others to reproduce the error

  1. With Blender in factory settings, switch to the shading tab
  2. Switch to rendered view in the viewport
  3. Switch to 'World' in the shader editor
  4. Add the following setup to the world shader:
  5. Connect 'result' from the Mix node to 'surface' on the world output node
  6. Blender immediately crashes
    crash.png
    crash.blend
**System Information** Operating system: macOS-12.6-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 04:23, hash: `34477bbfcd` Worked: N/A First bad commit 697b447c20 **Short description of error** When in rendered view, a particular material setup in the world shader will crash Blender immediately. **Exact steps for others to reproduce the error** 1. With Blender in factory settings, switch to the shading tab 2. Switch to rendered view in the viewport 3. Switch to 'World' in the shader editor 4. Add the following setup to the world shader: 5. Connect 'result' from the Mix node to 'surface' on the world output node 6. Blender immediately crashes ![crash.png](https://archive.blender.org/developer/F13574132/crash.png) [crash.blend](https://archive.blender.org/developer/F13574140/crash.blend)
Author

Added subscriber: @cmzw

Added subscriber: @cmzw

#101383 was marked as duplicate of this issue

#101383 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I'll check

Thanks for the report. I'll check
Member
Added subscribers: @Michael-Parkin-White-Apple, @fclem, @ThomasDinges
Member

Bisecting points me to- 697b447c20
cc @ThomasDinges
cc @Michael-Parkin-White-Apple
cc @fclem

Bisecting points me to- 697b447c20 cc @ThomasDinges cc @Michael-Parkin-White-Apple cc @fclem
Philipp Oeser changed title from World shader setup crashes Blender in rendered view to Regression: World shader setup crashes Blender in rendered view 2022-09-26 09:57:37 +02:00
Contributor

Added subscriber: @persun

Added subscriber: @persun
Contributor

Also can confirm this crash on Windows10/RX570.

Also can confirm this crash on Windows10/RX570.

This issue was referenced by cd1caa5853

This issue was referenced by cd1caa5853e4a4e87a13029b49976c61c780a697

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2022-09-27 00:00:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101372
No description provided.